test/reject/fused_annotation_mismatch.rk
crunch mismatched_fusion(values: f32s) -> f32s:
  | result: i32s <| values + <1.0>
  return result
